compilador/y.output
Terminals unused in grammar

    _AND
    _OR
    _NOT
    _EQ
    _NEQ
    _LT
    _GT
    _LEQ
    _GEQ
    _MOD
    _DIV
    _MULT
    _PLUS
    _MINUS
    _LPAREN
    _RPAREN
    _LBRACK
    _RBRACK
    _LBRACE
    _RBRACE
    _COMMA
    _SEMICOLON
    _DOT
    _COLON
    _EOF


State 17 conflicts: 2 shift/reduce
State 130 conflicts: 2 shift/reduce
State 148 conflicts: 1 reduce/reduce
State 153 conflicts: 1 shift/reduce
State 155 conflicts: 1 shift/reduce
State 169 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: CMDs

    2 CMDs: CMD CMDs
    3     | DECL_VAR ';' CMDs
    4     | DECL_FUN CMDs
    5     | %empty

    6 CMD: CMD_FOR
    7    | CMD_IF
    8    | CMD_WHILE
    9    | E_V ';'
   10    | '{' NOVO_ESCOPO CMD CMDs '}' DESTROI_ESCOPO
   11    | '{' NOVO_ESCOPO CMDs '}' DESTROI_ESCOPO
   12    | ';'
   13    | _RETURN ';'
   14    | _RETURN EE ';'
   15    | E ASM ';'

   16 CMD_IF: _IF '(' E ')' CMD _ELSE CMD
   17       | _IF '(' E ')' CMD

   18 CMD_FOR: _FOR '(' E_OPC ';' E_OPC ';' E_OPC ')' CMD
   19        | _FOR '(' DECL_VAR ';' E_OPC ';' E_OPC ')' CMD

   20 CMD_WHILE: _WHILE '(' E ')' CMD

   21 E_OPC: E_V
   22      | %empty

   23 DECL_VAR: _LET LVARs
   24         | _VAR VVARs
   25         | _CONST CTEs

   26 DECL_FUN: _FUNCTION _ID '(' ')' '{' NOVO_ESCOPO CMDs '}' DESTROI_ESCOPO
   27         | _FUNCTION _ID '(' NOVO_ESCOPO PARAMs ')' '{' CMDs '}' DESTROI_ESCOPO

   28 NOVO_ESCOPO: %empty

   29 DESTROI_ESCOPO: %empty

   30 PARAMs: PARAMs ',' _ID
   31       | _ID
   32       | PARAMs ',' _ID '=' E
   33       | _ID '=' E

   34 LVARs: LVAR ',' LVARs
   35      | LVAR

   36 VVARs: VVAR ',' VVARs
   37      | VVAR

   38 LVAR: _ID '=' EE
   39     | _ID

   40 VVAR: _ID '=' EE
   41     | _ID

   42 CTEs: _ID '=' EE ',' CTEs
   43     | _ID '=' EE

   44 E_V: E ',' E_V
   45    | E

   46 EE: E
   47   | '{' '}'

   48 E: _ID '=' EE
   49  | _ID _MAIS_IGUAL EE
   50  | _ID _MENOS_IGUAL EE
   51  | _ID _SETA EE
   52  | _ID _SETA '{' CMD CMDs '}'
   53  | EE _INC
   54  | '(' _FPSETA EE
   55  | '(' PARAMs _FPSETA EE
   56  | F '.' _ID '=' EE
   57  | F '.' _ID '.' _ID '=' EE
   58  | F '.' _ID _MAIS_IGUAL EE
   59  | F '[' EE ']' '=' EE
   60  | F '[' EE ']' '[' EE ']' '=' EE
   61  | F '.' _ID '[' EE ']' '=' EE
   62  | F '.' _ID '.' _ID '[' EE ']' '=' EE
   63  | F '[' EE ']' _MAIS_IGUAL EE
   64  | F '.' _ID '[' EE ']' _MAIS_IGUAL EE
   65  | EE '<' EE
   66  | EE '*' EE
   67  | EE '+' EE
   68  | EE '-' EE
   69  | EE '/' EE
   70  | EE '>' EE
   71  | EE '%' EE
   72  | EE _IGUAL_IGUAL EE
   73  | F

   74 F: _ID
   75  | _NUM
   76  | _STRING
   77  | '(' EE ')'
   78  | F '(' ')'
   79  | F '[' EE ']'
   80  | F '[' EE ']' '[' EE ']'
   81  | F '(' ARGs ')'
   82  | F '.' _ID '.' _ID '[' EE ']' '(' ARGs ')'
   83  | '[' ']'
   84  | '[' ARGs ']'
   85  | '{' CAMPOs '}'
   86  | F '.' _ID
   87  | FUNC_ANON
   88  | _TRUE
   89  | _FALSE

   90 FUNC_ANON: _FUNCTION '(' ')' '{' CMDs '}'
   91          | _FUNCTION '(' PARAMs ')' '{' CMDs '}'

   92 CAMPOs: CAMPOs ',' CAMPOs
   93       | _ID ':' EE

   94 ARGs: EE ',' ARGs
   95     | EE


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 71
    '(' (40) 16 17 18 19 20 26 27 54 55 77 78 81 82 90 91
    ')' (41) 16 17 18 19 20 26 27 77 78 81 82 90 91
    '*' (42) 66
    '+' (43) 67
    ',' (44) 30 32 34 36 42 44 92 94
    '-' (45) 68
    '.' (46) 56 57 58 61 62 64 82 86
    '/' (47) 69
    ':' (58) 93
    ';' (59) 3 9 12 13 14 15 18 19
    '<' (60) 65
    '=' (61) 32 33 38 40 42 43 48 56 57 59 60 61 62
    '>' (62) 70
    '[' (91) 59 60 61 62 63 64 79 80 82 83 84
    ']' (93) 59 60 61 62 63 64 79 80 82 83 84
    '{' (123) 10 11 26 27 47 52 85 90 91
    '}' (125) 10 11 26 27 47 52 85 90 91
    error (256)
    _ID (258) 26 27 30 31 32 33 38 39 40 41 42 43 48 49 50 51 52 56 57 58 61 62 64 74 82 86 93
    _NUM (259) 75
    _STRING (260) 76
    _LET (261) 23
    _VAR (262) 24
    _CONST (263) 25
    _FOR (264) 18 19
    _FUNCTION (265) 26 27 90 91
    _IF (266) 16 17
    _ELSE (267) 16
    _INC (268) 53
    _RETURN (269) 13 14
    _SETA (270) 51 52
    _FPSETA (271) 54 55
    _MAIS_IGUAL (272) 49 58 63 64
    _IGUAL_IGUAL (273) 72
    _MENOS_IGUAL (274) 50
    _WHILE (275) 20
    ASM (276) 15
    _TRUE (277) 88
    _FALSE (278) 89
    _AND (279)
    _OR (280)
    _NOT (281)
    _EQ (282)
    _NEQ (283)
    _LT (284)
    _GT (285)
    _LEQ (286)
    _GEQ (287)
    _MOD (288)
    _DIV (289)
    _MULT (290)
    _PLUS (291)
    _MINUS (292)
    _LPAREN (293)
    _RPAREN (294)
    _LBRACK (295)
    _RBRACK (296)
    _LBRACE (297)
    _RBRACE (298)
    _COMMA (299)
    _SEMICOLON (300)
    _DOT (301)
    _COLON (302)
    _EOF (303)


Nonterminals, with rules where they appear

    $accept (67)
        on left: 0
    S (68)
        on left: 1
        on right: 0
    CMDs (69)
        on left: 2 3 4 5
        on right: 1 2 3 4 10 11 26 27 52 90 91
    CMD (70)
        on left: 6 7 8 9 10 11 12 13 14 15
        on right: 2 10 16 17 18 19 20 52
    CMD_IF (71)
        on left: 16 17
        on right: 7
    CMD_FOR (72)
        on left: 18 19
        on right: 6
    CMD_WHILE (73)
        on left: 20
        on right: 8
    E_OPC (74)
        on left: 21 22
        on right: 18 19
    DECL_VAR (75)
        on left: 23 24 25
        on right: 3 19
    DECL_FUN (76)
        on left: 26 27
        on right: 4
    NOVO_ESCOPO (77)
        on left: 28
        on right: 10 11 26 27
    DESTROI_ESCOPO (78)
        on left: 29
        on right: 10 11 26 27
    PARAMs (79)
        on left: 30 31 32 33
        on right: 27 30 32 55 91
    LVARs (80)
        on left: 34 35
        on right: 23 34
    VVARs (81)
        on left: 36 37
        on right: 24 36
    LVAR (82)
        on left: 38 39
        on right: 34 35
    VVAR (83)
        on left: 40 41
        on right: 36 37
    CTEs (84)
        on left: 42 43
        on right: 25 42
    E_V (85)
        on left: 44 45
        on right: 9 21 44
    EE (86)
        on left: 46 47
        on right: 14 38 40 42 43 48 49 50 51 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 77 79 80 82 93 94 95
    E (87)
        on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 15 16 17 20 32 33 44 45 46
    F (88)
        on left: 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
        on right: 56 57 58 59 60 61 62 63 64 73 78 79 80 81 82 86
    FUNC_ANON (89)
        on left: 90 91
        on right: 87
    CAMPOs (90)
        on left: 92 93
        on right: 85 92
    ARGs (91)
        on left: 94 95
        on right: 81 82 84 94


State 0

    0 $accept: . S $end

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _LET       shift, and go to state 4
    _VAR       shift, and go to state 5
    _CONST     shift, and go to state 6
    _FOR       shift, and go to state 7
    _FUNCTION  shift, and go to state 8
    _IF        shift, and go to state 9
    _RETURN    shift, and go to state 10
    _WHILE     shift, and go to state 11
    _TRUE      shift, and go to state 12
    _FALSE     shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    ';'        shift, and go to state 16
    '{'        shift, and go to state 17

    $default  reduce using rule 5 (CMDs)

    S          go to state 18
    CMDs       go to state 19
    CMD        go to state 20
    CMD_IF     go to state 21
    CMD_FOR    go to state 22
    CMD_WHILE  go to state 23
    DECL_VAR   go to state 24
    DECL_FUN   go to state 25
    E_V        go to state 26
    EE         go to state 27
    E          go to state 28
    F          go to state 29
    FUNC_ANON  go to state 30


State 1

   48 E: _ID . '=' EE
   49  | _ID . _MAIS_IGUAL EE
   50  | _ID . _MENOS_IGUAL EE
   51  | _ID . _SETA EE
   52  | _ID . _SETA '{' CMD CMDs '}'
   74 F: _ID .

    _SETA         shift, and go to state 31
    _MAIS_IGUAL   shift, and go to state 32
    _MENOS_IGUAL  shift, and go to state 33
    '='           shift, and go to state 34

    $default  reduce using rule 74 (F)


State 2

   75 F: _NUM .

    $default  reduce using rule 75 (F)


State 3

   76 F: _STRING .

    $default  reduce using rule 76 (F)


State 4

   23 DECL_VAR: _LET . LVARs

    _ID  shift, and go to state 35

    LVARs  go to state 36
    LVAR   go to state 37


State 5

   24 DECL_VAR: _VAR . VVARs

    _ID  shift, and go to state 38

    VVARs  go to state 39
    VVAR   go to state 40


State 6

   25 DECL_VAR: _CONST . CTEs

    _ID  shift, and go to state 41

    CTEs  go to state 42


State 7

   18 CMD_FOR: _FOR . '(' E_OPC ';' E_OPC ';' E_OPC ')' CMD
   19        | _FOR . '(' DECL_VAR ';' E_OPC ';' E_OPC ')' CMD

    '('  shift, and go to state 43


State 8

   26 DECL_FUN: _FUNCTION . _ID '(' ')' '{' NOVO_ESCOPO CMDs '}' DESTROI_ESCOPO
   27         | _FUNCTION . _ID '(' NOVO_ESCOPO PARAMs ')' '{' CMDs '}' DESTROI_ESCOPO
   90 FUNC_ANON: _FUNCTION . '(' ')' '{' CMDs '}'
   91          | _FUNCTION . '(' PARAMs ')' '{' CMDs '}'

    _ID  shift, and go to state 44
    '('  shift, and go to state 45


State 9

   16 CMD_IF: _IF . '(' E ')' CMD _ELSE CMD
   17       | _IF . '(' E ')' CMD

    '('  shift, and go to state 46


State 10

   13 CMD: _RETURN . ';'
   14    | _RETURN . EE ';'

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 47
    _TRUE      shift, and go to state 12
    _FALSE     shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    ';'        shift, and go to state 48
    '{'        shift, and go to state 49

    EE         go to state 50
    E          go to state 51
    F          go to state 29
    FUNC_ANON  go to state 30


State 11

   20 CMD_WHILE: _WHILE . '(' E ')' CMD

    '('  shift, and go to state 52


State 12

   88 F: _TRUE .

    $default  reduce using rule 88 (F)


State 13

   89 F: _FALSE .

    $default  reduce using rule 89 (F)


State 14

   83 F: '[' . ']'
   84  | '[' . ARGs ']'

    _ID        shift, and go to state 1
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 47
    _TRUE      shift, and go to state 12
    _FALSE     shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 49
    ']'        shift, and go to state 53

    EE         go to state 54
    E          go to state 51
    F          go to state 29
    FUNC_ANON  go to state 30
    ARGs       go to state 55


State 15

   54 E: '(' . _FPSETA EE
   55  | '(' . PARAMs _FPSETA EE
   77 F: '(' . EE ')'

    _ID        shift, and go to state 56
    _NUM       shift, and go to state 2
    _STRING    shift, and go to state 3
    _FUNCTION  shift, and go to state 47
    _FPSETA    shift, and go to state 57
    _TRUE      shift, and go to state 12
    _FALSE     shift, and go to state 13
    '['        shift, and go to state 14
    '('        shift, and go to state 15
    '{'        shift, and go to state 49

    PARAMs     go to state 58
    EE         go to state 59
    E          go to state 51
    F          go to state 29
    FUNC_ANON  go to state 30


State 16

   12 CMD: ';' .

    $default  reduce using rule 12 (CMD)


State 17

   10 CMD: '{' . NOVO_ESCOPO CMD CMDs '}' DESTROI_ESCOPO
   11    | '{' . NOVO_ESCOPO CMDs '}' DESTROI_ESCOPO
   47 EE: '{' . '}'
   85 F: '{' . CAMPOs '}'

    _ID  shift, and go to state 60
    '}'  shift, and go to state 61

    _ID       [reduce using rule 28 (NOVO_ESCOPO)]
    '}'       [reduce using rule 28 (NOVO_ESCOPO)]
    $default  reduce using rule 28 (NOVO_ESCOPO)

    NOVO_ESCOPO  go to state 62
    CAMPOs       go to state 63


State 18

    0 $accept: S . $end

    $end  shift, and go to state 64


State 19

    1 S: CMDs .

    $default  reduce using rule 1 (S)


State 20

    2 CMDs: CMD . CMDs
